# for libstokes-core

lib_LTLIBRARIES = libstokes-core.la

libstokes_core_la_SOURCES = \
	stokes.c		\
	ewald-3f.c		\
	ewald-3ft.c		\
	ewald-3fts.c		\
	ewald-2f.c		\
	ewald-2ft.c		\
	ewald-2fts.c		\
	f.c			\
	ft.c			\
	fts.c			\
	two-body-res.c		\
        XA.c			\
        YA.c			\
        YB.c			\
        XC.c			\
        YC.c			\
        XG.c			\
        YG.c			\
        YH.c			\
        XM.c			\
        YM.c			\
        ZM.c			\
	XP.c			\
	XQ.c			\
	twobody.c		\
        XA-slip.c		\
        YA-slip.c		\
        YB-slip.c		\
        XC-slip.c		\
        YC-slip.c		\
        XG-slip.c		\
        YG-slip.c		\
        YH-slip.c		\
        XM-slip.c		\
        YM-slip.c		\
        ZM-slip.c		\
	twobody-slip.c		\
	lub.c			\
	minv-poly.c		\
	ewald.c			\
	non-ewald.c		\
	ewald-new.c		\
	non-ewald-new.c		\
	ewald-3f-matrix.c	\
	ewald-3ft-matrix.c	\
	ewald-3fts-matrix.c	\
	lub-matrix.c		\
	dgemm_c.c		\
	dgemv_c.c		\
	dgetri_c.c		\
	matrix.c		\
	bench.c			\
	noHI.c


libstokes_core_la_LDFLAGS = -version-info 1:0:0

include_HEADERS = libstokes-core.h
