# for libstokes-extra

lib_LTLIBRARIES = libstokes-extra.la

libstokes_extra_la_SOURCES = \
	stokes-nc.c		\
	stokes-nc-read.c	\
	stokes-guile.c		\
	ewald-2.c		\
	coll.c			\
	confinement.c		\
	confinement-guile.c	\
	periodicity.c		\
	bonds.c			\
	bonds-guile.c		\
	bonds-groups.c		\
	angles.c		\
	angles-guile.c		\
	ode.c			\
	ode-quaternion.c	\
	chebyshev.c		\
	dsaupd_c.c		\
	dnaupd_c.c		\
	dgeev_c.c		\
	dpotrf_c.c		\
	KIrand.c		\
	grid.c			\
	excluded-volume.c	\
	excluded-volume-guile.c	\
	ev-dh.c			\
	ev-dh-guile.c		\
	ev-dh-grid.c		\
	ev-LJ.c			\
	ev-LJ-guile.c		\
	nitsol_c.c		\
	brownian.c		\
	bd-imp.c		\
	bd-imp-nitsol.c		\
	bd-imp-fast.c		\
	bead-rod.c		\
	bead-rod-guile.c


libstokes_extra_la_LDFLAGS = -version-info 1:0:0

include_HEADERS = libstokes-extra.h
